gcc/testsuite/rust/rustc/ui/sized/unsized-binding_dg.rs
fn main() {
    let x = *""; // { dg-error ".E0277." "" { target *-*-* } }
    println!("{}", x);
    println!("{}", x);
}

